force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__System__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this option as managed by the system which means users can not manually select or deselect.</description>
        <inlineHelpText>Select the checkbox to indicate this option is managed by the system which makes it unavailable for user selection.</inlineHelpText>
        <label>System</label>
        <type>Checkbox</type>
    </CustomField>