force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__UpliftedByPackage__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</description>
        <inlineHelpText>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</inlineHelpText>
        <label>Uplifted By Package</label>
        <type>Checkbox</type>
    </CustomField>