force-app/main/default/objects/SBQQ__ProductOption__c/fields/Third_Party_Vendor__c.field-meta.xml
<CustomField>
        <fullName>Third_Party_Vendor__c</fullName>
        <label>Authorized Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X3rd_Party_Vendors</valueSetName>
        </valueSet>
    </CustomField>