force-app/main/default/objects/SBQQ__ProductOption__c/fields/Use_Bundled_Price__c.field-meta.xml
<CustomField>
        <fullName>Use_Bundled_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Bundled Price</label>
        <type>Checkbox</type>
    </CustomField>